syntax = "proto3";
package pb;

option go_package = "../pb";

message ArithRequst {
  int32 a = 1;
  int32 b = 2;
}

message ArithResponse {
  int32 pro = 1;
  int32 que = 2;
  int32 rem = 3;
}

service ArithSerive {
  rpc Multiply (ArithRequst) returns (ArithResponse);
}
